--- a/index.html
+++ b/index.html
@@ -35,6 +35,9 @@
                     </li>
                 </ul>
             </nav>
+            <div class="navation__container-line">
+                <i class="fa-solid fa-grip-lines"></i>
+            </div>
         </div>
     </header>
     <!--navation end-->
@@ -136,6 +139,7 @@
                 </a>
             </div>
         </section>
+        <div class="back__g1"></div>
     </section>
     <!--my project end-->
 
@@ -159,6 +163,7 @@
                     </a>
                 </li>
             </div>
+            <div class="hello__me"><p>Contact me</p></div>
             <div>
                 <li class="number">Phone number :
                     <span class="contact__me phone"><i>+959-420-161-318</i></span>
@@ -167,5 +172,7 @@
         </section>
     </footer>
     <!--contact me end-->
+
+    
 </body>
 </html>
